<resources>
    <string name="app_name">会天心理</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_login">用户登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="go_login">去登录</string>
    <string name="go_register">去注册</string>
    <string name="hint_userName">用户邮箱/手机号</string>
    <string name="hint_login_passWord">密码</string>
    <string name="hint_text_passWord">请输入密码</string>
    <string name="hint_register_passWord">6-18位字母或数字</string>
    <string name="agreement"><u>我已同意并阅读《会天心理教育软件注册协议》</u></string>
    <string name="new_user_register">新用户注册</string>
    <string name="home">首页</string>
    <string name="course">课程</string>
    <string name="package_home">套餐</string>
    <string name="article">文章</string>
    <string name="my">我的</string>
    <string name="myOrder">我的订单</string>
    <string name="myCollect">我的收藏</string>
    <string name="personal_information">个人信息</string>
        <string name="package_course">套餐课程</string>
    <string name="package_reviews">套餐评论</string>
    <string name="course_recommen">课程推荐</string>
    <string name="personal_resume">个人简历</string>
    <string name="personal_account">个人账户</string>
    <string name="system_notice">系统消息</string>
    <string name="opinion_feedback">意见反馈</string>
    <string name="system_setting">系统设置</string>
    <string name="exit_account">退出登录</string>
    <string name="hint_mobile">手机号</string>
    <string name="hint_email">邮箱</string>
    <string name="hint_confirm_passWord">确认密码</string>
    <string name="major">按专业</string>
    <string name="teacher">按讲师</string>
    <string name="sort">按排序</string>
    <string name="system_head">头像</string>
    <string name="system_wifi">仅供WIFI下观看和离线下载</string>
    <string name="system_eliminate">清除软件缓存</string>
    <string name="system_opinion">意见反馈</string>
    <string name="system_edition">检测到新版本</string>
    <string name="system_about">关于</string>
    <string name="system_set">系统设置</string>
    <string name="about_us">关于我们</string>
    <string name="about_software">268教育软件</string>
    <string name="about_version">v 3.08</string>
    <string name="about_knowledge">会天心理网是由湖南省会天职业培训学校、长沙会天心理咨询有限公司、衡阳市会天职业培训学校三大实体组成。会天成立于2006年，十年间会天相继给衡阳市教育局、衡阳广播电台、湖南省总工会、湖南省监狱系统、长沙市妇联、湖南省建行等政府及大型企业组织开展心理咨询师培训、后期的个人成长、EAP服务项目，为推动湖南省心理学行业发展做出了卓越的贡献，迄今为止也是全国极少数同时拥有心理咨询师、婚姻家庭咨询师培训资质的省级培训学校之一。会天人的梦想是打造中国心理学行业最精深的教育平台、通过精深-共创-卓越的品质培训，见习实习再就业的闭环，托起全国5亿人的幸福梦。</string>
    <string name="about_brief">2010-2015 北京易知路科技有限公司 版本所有\n京公网备11010802011695号 京ICP备13029607</string>
    <string name="about_welcome">欢迎页</string>
    <string name="recommend_small">小编推荐</string>
    <string name="recommend_hot">热门课程</string>
    <string name="confirm_order">确认订单</string>
    <string name="submit_order">提交订单</string>
    <string name="order_number">订单号 : </string>
    <string name="order_success">下单成功 !</string>
    <string name="order_total">订单总额 ：</string>
    <string name="promptly_pay">立即支付</string>
    <string name="lecturer_course">所讲课程</string>
    <string name="APPROVE">待处理</string>
    <string name="INIT">确认并支付</string>
    <string name="SUCCESS">已完成</string>
    <string name="REFUND">已退款</string>
    <string name="CANCEL">已取消</string>
    <string name="DELETE">删除</string>
    <string name="empty">清空</string>
    <string name="myCollection">我的收藏</string>
     <string name="package_description">套餐描述</string>
    <string name="play_history">播放记录</string>
    <string name="download_name">下载</string>
    <string name="name_choseload">选择您想要下载的课程</string>
    <string name="sliding_course">我的课程</string>
    <string name="sliding_teacher">名家讲师</string>
    <string name="sliding_announcement">系统消息</string>
    <string name="sliding_set">系统设置</string>
    <string name="sliding_feedback">意见反馈</string>
    <string name="downloading">下载中</string>
    <string name="downloaded">已下载</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="download">离线下载</string>
    <string name="play">播放</string>
    <string name="upload_video_info">视频信息</string>
    <string name="download_list">离线列表</string>
    <string name="screensize">画面尺寸</string>
    <string name="account_info">账户信息</string>
    <string name="new_state">最新动态</string>
    <string name="industry_information">行业资讯</string>
    <string name="Platform_notice">平台公告</string>
    <string name="purchase">立即购买</string>
    <string name="introduce">介绍</string>
    <string name="course_introduce">课程介绍</string>
    <string name="course_zhang">课程章节</string>
    <string name="course_discuss">讨论区</string>
    <string name="personal_message">个人信息</string>
    <string name="personal_head">头像</string>
    <string name="personal_name">昵称</string>
    <string name="personal_accountNumber">账号</string>
    <string name="personal_pwd">密码</string>
    <string name="personal_sex">性别</string>
    <string name="personal_phone">手机号</string>
    <string name="personal_autograph">个性签名</string>
    <string name="personal_nname">姓名</string>
    <string name="success">恭喜您，支付已成功!</string>
    <string name="study">马上去学习</string>
    <string name="account_balance">我的账户余额</string>
    <string name="account_detail">账户明细</string>
    <string name="account_consume">消费</string>
    <string name="account_recharge">现金充值</string>
    <string name="details">最新动态</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_course">搜索课程</string>
    <string name="search_comm">搜索小组</string>
    <string name="search_topic">搜索话题</string>
    <string name="search_wenzhang">搜索文章</string>
    <string name="search_text">搜索</string>
    <string name="pwd_newpwd">新密码</string>
    <string name="pwd_oldpwd">旧密码</string>
    <string name="pwd_input">再输入一次</string>
    <string name="pwd_correctpwd">请输入正确密码</string>
    <string name="feedback_information">反馈信息</string>
    <string name="feedback_content">请写下您的反馈内容：</string>
    <string name="feedback_contact">您的联系方式：</string>
    <string name="feedback_point_out">为了更好的解决您反馈的信息，请尽量在出现问题的网络环境下进行反馈!</string>
    <string name="feedback_hint">QQ/邮箱/手机号</string>
    <string name="feedback">一键反馈</string>
    <string name="share_arrive">分享到</string>
    <string name="buy_course">所购课程</string>
    <string name="pay_mode">支付方式</string>
    <string name="account_message">结算信息</string>
    <string name="alipay_pay">支付宝钱包支付</string>
    <string name="tuijian_alipay">推荐支付宝用户使用</string>
    <string name="wx_pay">微信支付</string>
    <string name="tuijian_wxpay">推荐已安装微信的用户使用</string>
    <string name="order_price">订单总价 : </string>
    <string name="reality_order_price">实付订单金额 : </string>
    <string name="teacher_details">讲师详情</string>
    <string name="lecturer">讲师</string>
    <string name="start">Copyright  268教育软件</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="forget_pass">忘记密码</string>
    <string name="gravity_left">left</string>
    <string name="gravity_center">center</string>
    <string name="gravity_right">right</string>
    <string name="third_login">第三方登录</string>
    <string name="hint_note_code">验证码</string>
    <string name="obtain_code">获取验证码</string>
    <string name="email_regist">邮箱注册</string>
    <string name="phone_regist">手机注册</string>
    <string name="pass_retrieve">找回密码</string>
    <string name="confirm">确认</string>
    <string name="discount_coupon">购课券</string>
    <string name="persion_resume">个人简历表</string>
    <string name="resume_sex">性别 ：</string>
    <string name="resume_name">昵称:</string>
    <string name="last_time">上次登录时间 ：</string>
    <string name="regist_time">注册时间</string>
    <string name="login_number">登录次数</string>
    <string name="look_video">观看视频</string>
    <string name="join_exam">参加考试</string>
    <string name="publish_note">记录笔记</string>
    <string name="publish_comment">发表评论</string>
    <string name="voucher">代金券</string>
    <string name="available_coupon">可使用</string>
    <string name="past_coupon">已过期</string>
    <string name="available_voucher">可使用</string>
    <string name="past_voucher">已过期</string>
    <string name="soon_past">即将过期</string>
    <string name="number">编	   号 :</string>
    <string name="limited">有效期 :</string>
    <string name="discount">折</string>
    <string name="no_available_coupon">无可用优惠券</string>
    <string name="no_past_coupon">无已过期优惠券</string>
    <string name="no_available_voucher">无可用代金券</string>
    <string name="no_used_coupon">无已用优惠券</string>
    <string name="no_past_voucher">无已过期代金券</string>
    <string name="apply_coupon">使用优惠券抵消部分金额</string>
    <string name="apply_my_coupon">使用购课券 : </string>
    <string name="apply_my_cou">请选择</string>
    <string name="coupon_number">请输入优惠券编码 : </string>
    <string name="accout_money">账户金额 ：</string>
    <string name="need_pay">还需支付 ：</string>
    <string name="coupon_note">注 : 优惠券使用后将不能撤销</string>
    <string name="change_head">更换头像</string>
    <string name="binding_user">绑定已有账号</string>
    <string name="config_binding">确认绑定</string>
    <string name="remove_binding">第三方账户绑定</string>
    <string name="relieve_binding">解除绑定</string>
    <string name="immediately_binding">立即绑定</string>
    <string name="thrid_prompt">绑定第三方账号,可以直接登录,还可以将内容同步到一下平台,与更多好友分享。</string>
    <string name="getting_prepayid">正在获取预支付订单</string>
    <string name="app_tip">提示</string>
    <string name="camera_shoot">相机拍摄</string>
    <string name="phone_photo">手机相册</string>
    <string name="isFree">试听</string>
    <string name="member_coupon">会员券</string>
    <string name="available_member">可用会员券</string>
    <string name="past_member">已用/已过期会员券</string>
    <string name="range">范	   围 :</string>
    <string name="no_past_member">无已用/已过期会员券!</string>
    <string name="no_member_coupon">无可用会员券</string>
    <string name="change_password">修改密码</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="edit_success">完成</string>
    <string name="study_statistics">学习统计</string>
    <string name="signature">这个家伙很懒,什么都没有写...</string>
    <string name="liji_look">立即观看</string>
    <string name="user_agreement">用户注册协议</string>
    <string name="no_discuss">还没有评论,快去说两句</string>
    <string name="cancel">取消</string>
    <string name="no_course">没有相关课程</string>
    <string name="no_article">没有相关文章</string>
    <string name="zhuanghu_yue">您还没有账户余额</string>
    <string name="discount_couu">优惠券</string>
    <string name="free">免费</string>
    <string name="network_no">当前网络不可用！</string>
    <string name="subject">科目</string>
    <string name="capability_assessment">能力评估</string>
    <string name="examination_record">考试记录</string>
    <string name="userID">用户ID</string>
    <string name="email_address">邮箱地址</string>
    <string name="phone_num">手机号</string>
    <string name="create_time">创建时间</string>
    <string name="accout_message">账号信息</string>
    <string name="error_correction">请输入纠错内容</string>
    <string name="error">纠错</string>
    <string name="error_submit">提交</string>
    <string name="zujuan_test">组卷模拟测试</string>
    <string name="zujuan_simple">简单</string>
    <string name="zujuan_medium">中等</string>
    <string name="zujuan_difficulty">困难</string>
    <string name="minute">分钟</string>
    <string name="into_exam">进入考试</string>
    <string name="audio_play_qunabu">播放全部</string>
    <string name="audio_play_xuan">选集</string>
    <string name="audio_downLoad_btn">立即下载</string>
    <string name="audio_downLoad_xuanze">选择全部</string>
    <string name="audio_comment">有什么想说的？</string>
    <string name="audio_comment_send">发送</string>
    <string name="my_fragment_money">我的钱包</string>
    <string name="exam_message">行业资讯</string>
    <string name="course_theacher">课程讲师</string>
    <string name="audio_courseCatalogue">课程目录</string>
    <string name="audio_courseDownload">批量下载</string>
    <string name="learning_record">记录</string>
    <string name="community">社区</string>
    <string name="gallery">考试</string>
</resources>