<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparenc"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="@dimen/x220"
        android:layout_height="@dimen/y29"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/dialog_top_background"
        android:gravity="center"
        android:text="@string/change_head"
        android:textColor="@android:color/white"
        android:textSize="@dimen/x15" />

    <Button
        android:id="@+id/btn_takephto"
        android:layout_width="@dimen/x220"
        android:layout_height="@dimen/y29"
        android:background="@color/White"
        android:text="@string/camera_shoot"
        android:textSize="@dimen/x15" />

    <View
        android:layout_width="@dimen/x220"
        android:layout_height="1dp"
        android:background="@color/color_cc" />

    <Button
        android:id="@+id/btn_file_select"
        android:layout_width="@dimen/x220"
        android:layout_height="@dimen/y29"
        android:background="@drawable/dialog_bottom"
        android:text="@string/phone_photo"
        android:textSize="@dimen/x15" />

</LinearLayout>