<?xml version="1.0" encoding="utf-8"?>
<!-- 立即支付的布局 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical" >

    <include layout="@layout/login_register_titlelayout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/pay_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="@dimen/x116"
            android:layout_marginTop="@dimen/y40"
            android:background="@drawable/success_img" />

        <LinearLayout
            android:id="@+id/pay_orderForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pay_success"
            android:layout_marginLeft="@dimen/x40"
            android:layout_marginTop="@dimen/y31"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_number"
                    android:textColor="@color/tabText"
                    android:textSize="@dimen/x14" />

                <TextView
                    android:id="@+id/order_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 订单号:"
                    android:textColor="@color/color_33"
                    android:layout_marginLeft="@dimen/x5"
                    android:textSize="@dimen/x14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_success"
                    android:textColor="@color/color_33"
                    android:textSize="@dimen/x14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y16"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_total"
                    android:textColor="@color/tabText"
                    android:textSize="@dimen/x14" />

                <TextView
                    android:id="@+id/course_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_14"
                    android:textSize="@dimen/x18" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y16"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accout_money"
                    android:textColor="@color/tabText"
                    android:textSize="@dimen/x14" />

                <TextView
                    android:id="@+id/accout_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_14"
                    android:textSize="@dimen/x18" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y16"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need_pay"
                    android:textColor="@color/tabText"
                    android:textSize="@dimen/x14" />

                <TextView
                    android:id="@+id/need_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_14"
                    android:textSize="@dimen/x18" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/promptly_pay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x30"
            android:layout_below="@id/pay_orderForm"
            android:layout_marginLeft="@dimen/x36"
            android:layout_marginRight="@dimen/x36"
            android:layout_marginTop="@dimen/y22"
            android:background="@drawable/payment_button"
            android:gravity="center"
            android:text="@string/promptly_pay"
            android:textColor="@color/White"
            android:textSize="@dimen/x14" />
    </RelativeLayout>

</LinearLayout>