<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F6"
    android:orientation="vertical" >

    <include layout="@layout/login_register_titlelayout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y37"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x15"
            android:gravity="center"
            android:text="@string/user_login"
            android:textColor="@color/Black" />

        <LinearLayout
            android:id="@+id/goto_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/x12"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/x1"
                android:text="@string/go_login"
                android:textColor="@color/Blue"
                android:textSize="@dimen/x12" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/go_login_register" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y31"
            android:background="@color/White"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/x12"
                android:background="@drawable/iconfont_wo" />

            <EditText
                android:id="@+id/userName_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/x9"
                android:background="@null"
                android:hint="@string/hint_userName"
                android:inputType="text"
                android:textColor="@color/color_33"
                android:textSize="@dimen/x15" />
        </LinearLayout>

        <View
            android:id="@+id/userName_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/color_F6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y31"
            android:background="@color/White"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/x12"
                android:background="@drawable/verification_code" />

            <EditText
                android:id="@+id/verification_code_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x9"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_note_code"
                android:inputType="number"
                android:textSize="@dimen/x15" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_F6" />

            <TextView
                android:id="@+id/get_obtain_code"
                android:layout_width="@dimen/x90"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/obtain_code"
                android:textColor="@color/Blue"
                android:textSize="@dimen/x13" />
        </LinearLayout>

        <View
            android:id="@+id/code_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/color_F6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y31"
            android:background="@color/White"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/x12"
                android:background="@drawable/iconfont_mima" />

            <EditText
                android:id="@+id/passWord_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/x9"
                android:background="@null"
                android:hint="@string/hint_register_passWord"
                android:inputType="textPassword"
                android:textColor="@color/color_33"
                android:textSize="@dimen/x15" />
        </LinearLayout>

        <View
            android:id="@+id/passWord_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/color_F6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y31"
            android:background="@color/White"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/x12"
                android:background="@drawable/iconfont_mima" />

            <EditText
                android:id="@+id/confirm_passWord_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/x9"
                android:background="@null"
                android:hint="@string/hint_confirm_passWord"
                android:inputType="textPassword"
                android:textColor="@color/color_33"
                android:textSize="@dimen/x15" />
        </LinearLayout>

        <View
            android:id="@+id/confirm_passWord_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/color_F6" />

        <TextView
            android:id="@+id/config_modify"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y29"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x15"
            android:layout_marginTop="@dimen/y49"
            android:background="@drawable/login_register_button"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/White"
            android:textSize="@dimen/x16" />
    </LinearLayout>

</LinearLayout>