<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ptr="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f1"
    android:orientation="vertical" >

    
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/Blue" >

        <LinearLayout
            android:id="@+id/back_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x8"
            android:gravity="center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/collection_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/myCollection"
            android:textColor="@color/White"
            android:textSize="@dimen/x16" />

        <TextView
            android:id="@+id/collection_image_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/x13"
            android:background="@drawable/edit_bg"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/White" 
            android:visibility="gone"
            />
    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.handmark.pulltorefresh.library.PullToRefreshScrollView
            android:id="@+id/refreshScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/y6"
            android:scrollbars="none"
            ptr:ptrAnimationStyle="flip" >

            <com.yizhilu.view.NoScrollListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null"
                android:scrollbars="none" >
            </com.yizhilu.view.NoScrollListView>
        </com.handmark.pulltorefresh.library.PullToRefreshScrollView>

        <LinearLayout
            android:id="@+id/null_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y106"
                android:background="@drawable/bg_youhuiquan" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y12"
                android:gravity="center"
                android:text="@string/no_available_coupon"
                android:textColor="@color/color_67"
                android:textSize="@dimen/x14" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>